# msensor

./: .gitignore  CMakeLists.txt  README.md  compose.yml  todo
.devcontainer/: devcontainer.json
client/: README.md  client.py  colormap.py  min_client.py  pyproject.toml
client/proto_gen/: __init__.py  adc_pb2.py  adc_pb2.pyi  adc_pb2_grpc.py  camera_pb2.py  camera_pb2.pyi  camera_pb2_grpc.py  imu_pb2.py  imu_pb2.pyi  imu_pb2_grpc.py  lidar_pb2.py  lidar_pb2.pyi  lidar_pb2_grpc.py  recording_pb2.py  recording_pb2.pyi  recording_pb2_grpc.py  robot_pb2.py  robot_pb2_grpc.py  sensors_pb2.py  sensors_pb2.pyi  sensors_pb2_grpc.py
docker/: DockerfileRuntime  docker-compose.yml  entrypoint.sh
docs/: arch.puml
grpc/: CMakeLists.txt  adc_service.cc  adc_service.hh  camera_service.cc  camera_service.hh  conversions.cc  conversions.hh  imu_service.cc  imu_service.hh  lidar_service.cc  lidar_service.hh  sensors_remote_client.cc  sensors_remote_client.hh  sensors_server.cc  sensors_server.hh  sensors_service.cc  sensors_service.hh
include/: CMakeLists.txt
include/adc/: ADS1115.hh  sim_adc.hh
include/camera/: opencv_camera.hh  sim_camera.hh
include/interface/: ICamera.hh
include/lidar/: sim_lidar.hh
include/recorder/: scan_player.hh
proto/: CMakeLists.txt  adc.proto  camera.proto  imu.proto  lidar.proto  recording.proto  sensors.proto
src/: CMakeLists.txt  ads1115_publisher.cc  all_publisher.cc  camera_publisher.cc  icm20948_publisher.cc  mid360_publisher.cc  rplidar_publisher.cc  sim_publisher.cc
src/adc/: CMakeLists.txt  ads1115.cc  sim_adc.cc
src/camera/: CMakeLists.txt  opencv_camera.cc  sim_camera.cc
src/file/: CMakeLists.txt  file.cc
src/imu/: CMakeLists.txt  sim_imu.cc
src/lidar/: CMakeLists.txt  mid360.cc  rp_lidar.cc  sim_lidar.cc
src/recorder/: CMakeLists.txt  scan_checker.cc  scan_player.cc  scan_recorder.cc
src/timing/: CMakeLists.txt
test/: draft.cc
test/client/: README.md  client.py  pyproject.toml
test/client/proto_gen/: sensors_pb2.py  sensors_pb2.pyi  sensors_pb2_grpc.py
test/src/: test_client_server.cc  test_recorder.cc
