[project]
name = "msensor_client"
version = "0.1.0"
description = "Msensor client library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grpcio==1.78.0",
    "grpcio-tools==1.78.0",
    "opencv-python>=4.12.0.88",
    "ruff>=0.15.5",
    "viser>=1.0.16",
]

[tool.ruff]
line-length = 120
exclude = ["proto_gen"]
